After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729200 - h264parse: fix leak of force-key-unit-event
h264parse: fix leak of force-key-unit-event
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal normal
: 1.2.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-29 15:05 UTC by Haakon Sporsheim (ieei)
Modified: 2014-04-29 15:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
unref/replace force_key_unit_event in gst_h264_parse_reset (672 bytes, patch)
2014-04-29 15:06 UTC, Haakon Sporsheim (ieei)
committed Details | Review

Description Haakon Sporsheim (ieei) 2014-04-29 15:05:32 UTC
See attached patch.
Comment 1 Haakon Sporsheim (ieei) 2014-04-29 15:06:43 UTC
Created attachment 275429 [details] [review]
unref/replace force_key_unit_event in gst_h264_parse_reset
Comment 2 Luis de Bethencourt 2014-04-29 15:26:37 UTC
Nice! This will unref the previous event if there was one.

Looks good to me.
Comment 3 Thiago Sousa Santos 2014-04-29 15:31:54 UTC
Thanks for the patch, pushed to master.

commit 36a2acae45a8da28401ca8ed8a5c116f50921fa2
Author: Haakon Sporsheim (ieei) <haakon.sporsheim@gmail.com>
Date:   Tue Apr 29 15:06:00 2014 +0000

    h264parse: unref/replace force_key_unit_event in gst_h264_parse_reset
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729200
Comment 4 Thiago Sousa Santos 2014-04-29 15:39:02 UTC
Also pushed to 1.2 branch:

commit 4f01875cfe40f06b6ad98d5644938a90a7adfbbc
Author: Haakon Sporsheim (ieei) <haakon.sporsheim@gmail.com>
Date:   Tue Apr 29 15:06:00 2014 +0000
Comment 5 Luis de Bethencourt 2014-04-29 15:44:58 UTC
Thank you very much Haakon. Good one.

Thiago! \o/