h264parse: unref/replace force_key_unit_event in gst_h264_parse_reset

https://bugzilla.gnome.org/show_bug.cgi?id=729200