gst/videoparsers/gsth264parse.c
@@ -209,7 +209,7 @@ gst_h264_parse_reset (GstH264Parse * h264parse)
   h264parse->sent_codec_tag = FALSE;
 
   h264parse->pending_key_unit_ts = GST_CLOCK_TIME_NONE;
-  h264parse->force_key_unit_event = NULL;
+  gst_event_replace (&h264parse->force_key_unit_event, NULL);
 
   h264parse->discont = FALSE;
 
